--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "three": "^0.167.1"
   },
   "devDependencies": {
+    "@types/cannon": "^0.1.13",
     "@types/three": "^0.167.2",
     "vite": "^5.4.2"
   }
