--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "cannon": "^0.6.2",
+    "cannon-es": "^0.20.0",
     "gsap": "3.5.1",
     "lil-gui": "^0.19.2",
     "three": "^0.167.1"
